# audio-mixer-stm32

./: .gitignore  .mxproject  AUDIO_MIXER.ioc  CMakeLists.txt  README.md  STM32H563xx_FLASH.ld
Core/Inc/: FreeRTOSConfig.h  gpdma.h  main.h  sai.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: app_freertos.c  fmc.c  gpdma.c  gpio.c  i2c.c  main.c  octospi.c  sai.c  stm32h5xx_it.c  tim.c
Modules/Inc/: Screen1State.hpp  Screen2State.hpp  Screen3State.hpp  Screen4State.hpp  Screen5State.hpp  audio_module.h  delay_fx.h  eq_fx.h
Modules/Src/: Screen1State.cpp  Screen2State.cpp  Screen3State.cpp  Screen4State.cpp  Screen5State.cpp  audio_module.c  delay_fx.c  eq_fx.c  w25q64.c
TouchGFX/: AUDIO_MIXER.touchgfx  ApplicationTemplate.touchgfx.part  target.config
TouchGFX/assets/texts/: texts.xml
TouchGFX/simulator/msvs/: Application.vcxproj.filters
cmake/: gcc-arm-none-eabi.cmake
cmake/Modules/: CMakeLists.txt
cmake/stm32cubemx/: CMakeLists.txt
